استكمال الصفحة الرئيسية والتنقل ومتطلبات Issue 43
